--- a/docs/docs/guides/p5-2.x.x.md
+++ b/docs/docs/guides/p5-2.x.x.md
@@ -7,7 +7,7 @@ With p5.js 2.0, and it's introduction to use `async/await` for asset loading, we
 
 ## Adding additional asciifiers
 
-When adding additional asciifiers, similar to the example in the [**Running multiple rendering pipelines in parallel**](#) guide, it's necessary to add the `async` keyword to the `setupAsciify` function header. When then adding a new asciifier, we need to use the `await` keyword when calling `p5asciify.add(...)`.
+When adding additional asciifiers, similar to the example in the [**Running multiple rendering pipelines in parallel**](./multiple-asciifiers) guide, it's necessary to add the `async` keyword to the `setupAsciify` function header. When then adding a new asciifier, we need to use the `await` keyword when calling [`p5asciify.add()`](../api/classes/P5AsciifierManager#add).
 
 ```javascript
 let defaultAsciifier; // Define a variable to store the default `P5Asciifier` instance
@@ -72,5 +72,5 @@ function windowResized() {
 <hr />
 
 :::note
-This is currently the only scenario where `async/await` is required with p5.js 2.0. For all other p5.asciify functionality, the standard usage patterns work as before. If you encounter any other situations requiring async handling, please report them in the [**GitHub repository**](https://github.com/humanbydefinition/p5.asciify).
+This is currently the only scenario where `async/await` is required with p5.js 2.0. For all other p5.asciify functionality, the standard usage patterns work as before. If you encounter any other situations requiring async handling, please report them in the [**GitHub repository**](https://github.com/humanbydefinition/p5.asciify) of the library.
 :::
