--- a/docs/docs/guides/p5-2.x.x.md
+++ b/docs/docs/guides/p5-2.x.x.md
@@ -1,6 +1,9 @@
 ---
 sidebar_position: 7
 title: Integrating p5.asciify with p5.js 2.0
+description: Learn how to integrate p5.asciify with p5.js 2.0 and its async/await asset loading. Master the required async patterns for adding multiple asciifiers and ensure compatibility with modern p5.js versions.
+keywords: [p5.js 2.0 p5.asciify, async await p5.asciify, p5.js async asset loading, setupAsciify async, p5asciify add await, p5.js 2.0 compatibility, async multiple asciifiers, p5.asciify modern p5.js]
+
 ---
 
 With p5.js 2.0, and it's introduction to use `async/await` for asset loading, we have to make use of this in certain scenarios too when using `p5.asciify` with `p5.js` versions `>=2.0.2`.
